<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4022.16">
  <POU Name="F_VRC_DIODE_ILK" Id="{798f6d64-142d-4689-ba31-4d47e7072741}" SpecialFunc="None">
    <Declaration><![CDATA[FUNCTION F_VRC_DIODE_ILK : BOOL
VAR_INPUT

	i_stPGA : ST_VG;
	i_stPGB	: ST_VG;

END_VAR
VAR

	rHysterisis : REAL := 0;

	xInterlock: BOOL;
	rTolerance: REAL := 20;
END_VAR]]></Declaration>
    <Implementation>
      <ST><![CDATA[(* The principle is simple, a VRC should never open when B side pressure is greater than the A side pressure. *)
rTolerance := 20;
F_VRC_DIODE_ILK := ((i_stPGA.rPRESS + rTolerance >= i_stPGB.rPRESS + rHysterisis) OR i_stPGA.xBAKEOUT) AND i_stPGA.xPRESS_OK AND i_stPGB.xPRESS_OK;

(* OK it gets a bit more complicated with hysterisis,

Now, if the F_VIC_DIODE_ILK is FALSE then some hysterisis is added to the B side. But if it's OK then we just stick with making sure that the A side is greater than the B side

*)
(*
IF NOT F_VIC_DIODE_ILK THEN
Hysterisis := 40;
ELSE
Hysterisis := 0;
END_IF
*)]]></ST>
    </Implementation>
    <LineIds Name="F_VRC_DIODE_ILK">
      <LineId Id="3" Count="14" />
      <LineId Id="2" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>